criada componentes com seu estilos

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,19 +1,24 @@
 <div class="container__big-card">
     <div class="big-card__photo">
         <img 
-        src="https://digest.med.br/wp-content/uploads/2024/07/no-image.jpg" 
+        src="https://cdn.britannica.com/49/182849-050-4C7FE34F/scene-Iron-Man.jpg" 
         alt=""
         height="500px"
-        width="500px"
+        srcset=""
         >
     </div>
     <div class="big-card__title">
-        <h1>Saiu a nova versão do Angular</h1>
+        <h1><a href="#">Saiu a nova versão do Angular</a></h1>
     </div>
     <div class="big-card__description">
         <p>
-            bla bla bla bla bla bla bla bla bla 
-            bla bla bla bla bla bla bla bla bla 
+            <a href="#">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+             Quisque scelerisque, ex at tincidunt pretium, sem augue 
+             pulvinar nunc, ac pellentesque felis metus nec mauris.
+              Mauris eu convallis neque, non tempus libero. 
+              Etiam eleifend dictum efficitur.
+            </a> 
         </p>
     </div>
 </div>
