--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,8 +1,29 @@
 .container__big-card{
     border: solid white 2px;
-    width: 700px;
+    margin-left: 100px;
+    margin-right: 50px;
+    width: 800px;
     height: 700px;
+
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.big-card__title > h1 {
+    margin-top: 20px;
+    font-size: 25px;
+}
+
+.big-card__description  {
+    margin-top: 15px;
+}
+
+.big-card__description > p > a {
+    color: grey;
+}
+
+.big-card__photo > img {
+    width: 100%;
 }
