--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,21 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+    <div class="container__small-card-content">
+        <div class="small-card__photo">
+            <img 
+            src="https://lumiere-a.akamaihd.net/v1/images/cg_avengersendgame_disneyplus_mobile_21420_30d038e4.jpeg?region=0,0,1024,640" 
+            alt=""
+            height="px"
+            srcset=""
+            >
+        </div>
+    
+        <div class="small-card__title">
+            <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+        </div>
+    </div>
+
+    <div class="container__small-card__separator">
+        <hr>
+    </div>
+    
+</div>
