--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,7 +2,7 @@
     <div class="container__small-card-content">
         <div class="small-card__photo">
             <img 
-            src="https://lumiere-a.akamaihd.net/v1/images/cg_avengersendgame_disneyplus_mobile_21420_30d038e4.jpeg?region=0,0,1024,640" 
+            src={{photoCover}} 
             alt=""
             height="px"
             srcset=""
@@ -10,7 +10,7 @@
         </div>
     
         <div class="small-card__title">
-            <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+            <h1><a [routerLink]="['content', Id]">{{cardTitle}}</a></h1>
         </div>
     </div>
 
