--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,37 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
 
 <app-title></app-title>
 
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+
+        <app-big-card
+            Id="1" 
+            photoCover="https://cdn.britannica.com/49/182849-050-4C7FE34F/scene-Iron-Man.jpg"
+            cardTitle="Novo Homem De Ferro Em 3D"
+            cardDescription="Marvel Anuncia novo homem de ferro"
+        ></app-big-card>
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card 
+            Id="2"
+            cardTitle="Nova serie anunciada no Disney+"
+            photoCover="https://uploads.folhabv.com.br/2024/06/6O5N075Y-star-wars-1024x576.webp"
+        >
+        </app-small-card>
+        
+        <app-small-card
+            Id="3"
+            cardTitle="Novo filme do pantera negra lançado em breve"
+            photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2022/11/Pantera-Negra-Disney-Plus.jpg"
+        >
+        </app-small-card>
+
+        <app-small-card
+            Id="4"
+            cardTitle="Novo Filme do X men está em pós produção"
+            photoCover="https://www.comboinfinito.com.br/principal/wp-content/uploads/2021/09/X-Men-4.jpg"
+        >
+        </app-small-card>
     </div>
 </div>
 
